# obsydian

./: .bazelrc  .gitignore  ARCHITECTURE.md  BCR_PUBLISHING.md  BUILD  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  Makefile  PLAN.MD  README.md  extensions.bzl
.github/workflows/: release-framework.yml
benchmarks/: BUILD  memory_usage_bench.cpp  router_bench.cpp  startup_time_bench.cpp  ui_render_bench.cpp  window_creation_bench.cpp
core/: BUILD
core/ffi/: platform.cpp  platform.h  platform_test.cpp
core/layout/: BUILD  constraint.cpp  constraint.h  engine.cpp  engine.h  layout_engine.cpp  layout_test.cpp  manager.cpp  manager.h  node.cpp  style.cpp  view_node.cpp  view_node.h
core/mounting/: BUILD  component_view_registry.cpp  component_view_registry.h  mounting_coordinator.cpp  mounting_coordinator.h  mounting_test.cpp  view_mutation.h
core/routing/: BUILD  navigation_history.cpp  navigation_history.h  route_matcher.cpp  route_matcher.h  route_registry.cpp  route_registry.h  route_renderer.cpp  route_renderer.h  route_scanner.cpp
core/runtime/: obsidian.cpp  obsidian_test.cpp
core/shadow/: BUILD  mounting_manager.cpp  mounting_manager.h  shadow_node.cpp  shadow_node.h  shadow_test.cpp  shadow_tree.cpp  shadow_tree.h
core/ui/: ui.h
docs/: BENCHMARKS.md  LAYOUT_API.md  LAYOUT_EXAMPLES.md  LAYOUT_SYSTEM_CHECKPOINTS.md  LAYOUT_SYSTEM_PLAN.md  RENDERER_ARCHITECTURE_PLAN.md  VERIFICATION_REPORT.md
docs/benchmarks & setup/: CI_CD.md
include/: BUILD
platform/: BUILD
scripts/: benchmark_regression.sh  build-xcframework.sh  ci.sh  install-tools.sh
src/: BUILD
system/: BUILD
test_apps/: BUILD
tests/: BUILD
tests/gui/: BUILD  (+10 more)
tools/: BUILD
ui/: BUILD
(+196 files in other folders)
