# Obsidian - Cross-platform native framework
# Multi-year production-grade build system configuration

module(
    name = "obsidian",
    version = "2.2.1",
    compatibility_level = 1,
)

# Bazel version requirement
bazel_dep(name = "platforms", version = "1.0.0")

# Apple platform support (iOS, macOS, watchOS, tvOS)
bazel_dep(name = "apple_support", version = "1.24.4")
bazel_dep(name = "rules_apple", version = "4.3.3")
bazel_dep(name = "rules_swift", version = "3.4.1")
bazel_dep(name = "rules_xcodeproj", version = "3.5.1")

# Android platform support
bazel_dep(name = "rules_android", version = "0.6.6")
bazel_dep(name = "rules_kotlin", version = "2.2.1")
bazel_dep(name = "rules_java", version = "9.3.0")

# C/C++ support
bazel_dep(name = "rules_cc", version = "0.2.16")

# Testing framework
bazel_dep(name = "googletest", version = "1.17.0")

# Performance benchmarking (via module extension - not in BCR)
# Google Benchmark is fetched via http_archive in extensions.bzl

# Google Benchmark extension (not available in BCR, using http_archive)
google_benchmark = use_extension("//:extensions.bzl", "google_benchmark_extension")
use_repo(google_benchmark, "com_github_google_benchmark")

# Apple CC toolchain setup (required for objc_library targets)
# This exposes the local_config_apple_cc repository needed for Apple platform builds
apple_cc_configure = use_extension("@apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc")

# Register the Apple CC toolchains
register_toolchains("@local_config_apple_cc//:all")
